Подключает modern-normalize и Prettier

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css
+">
+
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- Шапка -->
     <header class="header-brg"> 
-        <nav>
+         <nav>
 <a href="./index.html" class="logo">
     Web<span class="black">Studio</span> 
 </a>
@@ -27,6 +30,7 @@
     <li> <a href="" class="link">Контакты</a> </li>
 </ul>
 </nav>
+
 
 <ul class="contacts">
     <li> <a href="mailto:info@devstudio.com" class="link"> info@devstudio.com</a> </li>
