Сделает margin и padding(Web-студии)

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,7 @@
 
     <!-- Шапка -->
     <header class="header-brg">
+        <div class="container">
         <nav>
             <a href="./index.html" class="logo">
         Web<span class="black">Studio</span>
@@ -34,12 +35,16 @@
             <li> <a href="mailto:info@devstudio.com" class="link"> info@devstudio.com</a> </li>
             <li> <a href="tel:+380961111111" class="link">+38 096 111 11 11</a> </li>
         </ul>
+        </div>
     </header>
     <main>
+
+        
 
 <!-- Виды услуг -->
 
     <section class="section">
+        <div class="container">
         <h1 class="section-title">Виды услуг</h1>
         <ul class="button-list">
             <li>
@@ -126,11 +131,13 @@
         </a>
     </li>
 </ul>
+        </div>
     </section>
     </main>
 
     <!-- Подвал -->
     <footer class="footer-brg">
+        <div class="container">
         <a href="/" class="logo">Web<span class="white">Studio</span></a>
         <address>
             <ul class="address-list">
@@ -145,6 +152,8 @@
                 </li>
             </ul>
         </address>
+        </div>
     </footer>
+    
 </body>
 </html>
