--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <!-- Шапка -->
     <header class="header-brg"> 
+        <div class="container">
          <nav>
 <a href="./index.html" class="logo">
     Web<span class="black">Studio</span> 
@@ -36,18 +37,22 @@
     <li> <a href="mailto:info@devstudio.com" class="link"> info@devstudio.com</a> </li>
     <li> <a href="tel:+380961111111" class="link">+38 096 111 11 11</a> </li>
 </ul>
+        </div>
     </header>
     <main>
 
     <!-- Герой -->
         <section class="hero">
+            <div class="container">
             <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1> 
 
             <button class="button-hero" type="button">Заказать услугу</button>
+            </div>
         </section>
 
     <!-- Преимущества -->
     <section class="section">
+        <div class="container">
         <h2 class="section-title">Преимущества</h2>
 
         <ul class="feature-list">
@@ -71,10 +76,12 @@
                 <p class="desc-feature">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
+        </div>
     </section>
 
     <!--  Чем занимаемся-->
     <section class="section">
+        <div class="container">
         <h2 class="section-title">Чем мы занимаемся</h2>
 <ul>
     <li>
@@ -89,42 +96,46 @@
 <img src="./images/img3.jpg" alt="tablet" width="370" height="294">
     </li>
 </ul>
+        </div>
     </section>
 
     <!-- Команда -->
     <section class="section-comand-brg">
+        <div class="container">
         <h2 class="section-title">
             Наша команда
         </h2>
         <ul class="command-list">
             <li>
-                <img src="./images/photo1.jpg" alt="photo Igor" width="270" height="260">
+                <img class="team-photo" src="./images/photo1.jpg" alt="photo Igor" width="270" height="260">
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p class="desc">Product Designer</p>
             </li>
 
             <li>
-                <img src="./images/photo2.jpg" alt="photo Olga" width="270" height="260">
+                <img class="team-photo" src="./images/photo2.jpg" alt="photo Olga" width="270" height="260">
                 <h3 class="title">Ольга Репина</h3>
                 <p class="desc">Frontend Developer</p>    
             </li>
 
             <li>
-                <img src="./images/photo3.jpg" alt="photo Nikolay" width="270" height="260">
+                <img class="team-photo" src="./images/photo3.jpg" alt="photo Nikolay" width="270" height="260">
                 <h3 class="title">Николай Тарасов</h3>
                 <p class="desc">Marketing</p>            
             </li>
 
             <li>
-                <img src="./images/photo4.jpg" alt="photo Michael" width="270" height="260">
+                <img class="team-photo" src="./images/photo4.jpg" alt="photo Michael" width="270" height="260">
                 <h3 class="title">Михаил Ермаков</h3>
                 <p class="desc">UI Designer</p>
             </li>
         </ul>
+        </div>
     </section>
     </main>
     <!-- Подвал -->
     <footer class="footer-brg">
+        <div class="container">
         <a href="/" class="logo">Web<span class="white">Studio</span></a>
         <address>
             <ul class="address-list">
@@ -139,6 +150,7 @@
         </li>
     </ul>
 </address>
+        </div>
     </footer>
 </body>
 </html>
