--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
 </head>
 <body>
     <!-- Шапка -->
-    <header class="header-brg"> 
-        <div class="container">
-         <nav>
+    <header class="page-header"> 
+        <div class="container main-nav">
+         <nav class="main-nav">
 <a href="./index.html" class="logo">
     Web<span class="black">Studio</span> 
 </a>
 
 <ul class="site-nav list">
-    <li> <a href="./index.html" class="link current">Студия</a> </li>
-    <li> <a href="./portfolio.html" class="link">Портфолио</a> </li>
-    <li> <a href="" class="link">Контакты</a> </li>
+    <li class="item"> <a href="./index.html" class="link current">Студия</a> </li>
+    <li class="item"> <a href="./portfolio.html" class="link">Портфолио</a> </li>
+    <li class="item"> <a href="" class="link">Контакты</a> </li>
 </ul>
 </nav>
 
 
 <ul class="contacts">
-    <li> <a href="mailto:info@devstudio.com" class="link"> info@devstudio.com</a> </li>
-    <li> <a href="tel:+380961111111" class="link">+38 096 111 11 11</a> </li>
+    <li class="item"> <a href="mailto:info@devstudio.com" class="link"> info@devstudio.com</a> </li>
+    <li class="item"> <a href="tel:+380961111111" class="link">+38 096 111 11 11</a> </li>
 </ul>
         </div>
     </header>
@@ -56,22 +56,22 @@
         <h2 class="section-title">Преимущества</h2>
 
         <ul class="feature-list">
-            <li>
+            <li class="item">
                 <h3 class="title">Внимание к деталям</h3>
                 <p class="desc-feature"> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
 
-            <li>
+            <li class="item">
                 <h3 class="title">Пунктуальность</h3>
                 <p class="desc-feature">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
 
-            <li>
+            <li class="item">
                 <h3 class="title">Планирование</h3>
                 <p class="desc-feature">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
 
-            <li>
+            <li class="item">
                 <h3 class="title">Современные технологии</h3>
                 <p class="desc-feature">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
@@ -134,7 +134,7 @@
     </section>
     </main>
     <!-- Подвал -->
-    <footer class="footer-brg">
+    <footer class="page-footer">
         <div class="container">
         <a href="/" class="logo">Web<span class="white">Studio</span></a>
         <address>
