--- a/portfolio.html
+++ b/portfolio.html
@@ -19,21 +19,21 @@
 <body>
 
     <!-- Шапка -->
-    <header class="header-brg">
-        <div class="container">
-        <nav>
+    <header class="page-header">
+        <div class="container main-nav">
+        <nav class="main-nav">
             <a href="./index.html" class="logo">
         Web<span class="black">Studio</span>
             </a>
             <ul class="site-nav list">
-                <li> <a href="./index.html" class="link">Студия</a> </li>
-                <li> <a href="./portfolio.html" class="link current">Портфолио</a> </li>
-                <li> <a href="/" class="link">Контакты</a> </li>
+                <li class="item"> <a href="./index.html" class="link">Студия</a> </li>
+                <li class="item"> <a href="./portfolio.html" class="link current">Портфолио</a> </li>
+                <li class="item"> <a href="/" class="link">Контакты</a> </li>
             </ul>
         </nav>
         <ul class="contacts">
-            <li> <a href="mailto:info@devstudio.com" class="link"> info@devstudio.com</a> </li>
-            <li> <a href="tel:+380961111111" class="link">+38 096 111 11 11</a> </li>
+            <li class="item"> <a href="mailto:info@devstudio.com" class="link"> info@devstudio.com</a> </li>
+            <li class="item"> <a href="tel:+380961111111" class="link">+38 096 111 11 11</a> </li>
         </ul>
         </div>
     </header>
@@ -67,63 +67,63 @@
     <!-- Примеры работ -->
 
 <ul class="work-list">
-    <li>
+    <li class="card">
         <a class="link" href="">
             <img class="projects" src="./images/project1.jpg" alt="веб-сайт" width="370" height="294">
         <h2 class="title">Технокряк</h2>
         <p class="text">Веб-сайт</p>
         </a>
     </li>
-    <li>
+    <li class="card">
         <a class="link" href="">
             <img class="projects" src="./images/project2.jpg" alt="постер" width="370" height="294">
         <h2 class="title">Постер New Orlean vs Golden Star</h2>
         <p class="text">Дизайн</p>
         </a>
     </li>
-    <li>
+    <li class="card">
         <a class="link" href="">
             <img class="projects" src="./images/project3.jpg" alt="название-ресторана" width="370" height="294">
         <h2 class="title">Ресторан Seafood</h2>
         <p class="text">Приложение</p>
         </a>
     </li>
-    <li>
+    <li class="card">
         <a class="link" href="">
             <img class="projects" src="./images/project4.jpg" alt="наушники" width="370" height="294">
         <h2 class="title">Проект Prime</h2>
         <p class="text">Маркетинг</p>
         </a>
     </li>
-    <li>
+    <li class="card">
         <a class="link" href="">
             <img class="projects" src="./images/project5.jpg" alt="коробки" width="370" height="294">
         <h2 class="title">Проект Boxes</h2>
         <p class="text">Приложение</p>
         </a>
     </li>
-    <li>
+    <li class="card">
         <a class="link" href="">
             <img class="projects" src="./images/project6.jpg" alt="веб-сайт" width="370" height="294">
         <h2 class="title">Inspiration has no Borders</h2>
         <p class="text">Веб-сайт</p>
         </a>
     </li>
-    <li>
+    <li class="card">
         <a class="link" href="">
             <img class="projects" src="./images/project7.jpg" alt="книга" width="370" height="294">
         <h2 class="title">Издание Limited Edition</h2>
         <p class="text">Дизайн</p>
         </a>
     </li>
-    <li>
+    <li class="card">
         <a class="link" href="">
             <img class="projects" src="./images/project8.jpg" alt="дизайн" width="370" height="294">
         <h2 class="title">Проект LAB</h2>
         <p class="text">Маркетинг</p>
         </a>
     </li>
-    <li>
+    <li class="card">
         <a class="link" href="">
             <img class="projects" src="./images/project9.jpg" alt="компьютер" width="370" height="294">
         <h2 class="title">Growing Business</h2>
@@ -136,7 +136,7 @@
     </main>
 
     <!-- Подвал -->
-    <footer class="footer-brg">
+    <footer class="page-footer">
         <div class="container">
         <a href="/" class="logo">Web<span class="white">Studio</span></a>
         <address>
