Сделала все flex ,запарка на margin-right в button

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,9 +63,10 @@
                 <button class="button" type="button">Маркетинг</button>
             </li>
         </ul>
+        </div>
     
     <!-- Примеры работ -->
-
+<div class="container">
 <ul class="work-list">
     <li class="card">
         <a class="link" href="">
