--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
     <section class="section">
         <div class="container">
         <h2 class="section-title">Чем мы занимаемся</h2>
-<ul>
-    <li>
+<ul class="services">
+    <li class="item">
 <img src="./images/img1.jpg" alt="computer" width="370" height="294">
     </li>
 
-    <li>
+    <li class="item">
     <img src="./images/img2.jpg" alt="smartphone" width="370" height="294">
     </li>
 
-    <li>
+    <li class="item">
 <img src="./images/img3.jpg" alt="tablet" width="370" height="294">
     </li>
 </ul>
@@ -106,25 +106,25 @@
             Наша команда
         </h2>
         <ul class="command-list">
-            <li>
+            <li class="card">
                 <img class="team-photo" src="./images/photo1.jpg" alt="photo Igor" width="270" height="260">
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p class="desc">Product Designer</p>
             </li>
 
-            <li>
+            <li class="card">
                 <img class="team-photo" src="./images/photo2.jpg" alt="photo Olga" width="270" height="260">
                 <h3 class="title">Ольга Репина</h3>
                 <p class="desc">Frontend Developer</p>    
             </li>
 
-            <li>
+            <li class="card">
                 <img class="team-photo" src="./images/photo3.jpg" alt="photo Nikolay" width="270" height="260">
                 <h3 class="title">Николай Тарасов</h3>
                 <p class="desc">Marketing</p>            
             </li>
 
-            <li>
+            <li class="card">
                 <img class="team-photo" src="./images/photo4.jpg" alt="photo Michael" width="270" height="260">
                 <h3 class="title">Михаил Ермаков</h3>
                 <p class="desc">UI Designer</p>
