--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         </section>
 
     <!-- Преимущества -->
-    <section class="section">
+    <section class="section feature">
         <div class="container">
-        <h2 class="section-title">Преимущества</h2>
+        <h2 class="section-hidden-title">Преимущества</h2>
 
         <ul class="feature-list">
             <li class="item">
@@ -107,27 +107,35 @@
         </h2>
         <ul class="command-list">
             <li class="card">
-                <img class="team-photo" src="./images/photo1.jpg" alt="photo Igor" width="270" height="260">
+                <img src="./images/photo1.jpg" alt="photo Igor" width="270" height="260">
+                <div class="team-photo">
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p class="desc">Product Designer</p>
+                </div>
             </li>
 
             <li class="card">
-                <img class="team-photo" src="./images/photo2.jpg" alt="photo Olga" width="270" height="260">
+                <img src="./images/photo2.jpg" alt="photo Olga" width="270" height="260">
+                <div class="team-photo">
                 <h3 class="title">Ольга Репина</h3>
                 <p class="desc">Frontend Developer</p>    
+                </div>
             </li>
 
             <li class="card">
-                <img class="team-photo" src="./images/photo3.jpg" alt="photo Nikolay" width="270" height="260">
+                <img src="./images/photo3.jpg" alt="photo Nikolay" width="270" height="260">
+                <div class="team-photo">
                 <h3 class="title">Николай Тарасов</h3>
-                <p class="desc">Marketing</p>            
+                <p class="desc">Marketing</p>  
+                </div>          
             </li>
 
             <li class="card">
-                <img class="team-photo" src="./images/photo4.jpg" alt="photo Michael" width="270" height="260">
+                <img src="./images/photo4.jpg" alt="photo Michael" width="270" height="260">
+                <div class="team-photo">
                 <h3 class="title">Михаил Ермаков</h3>
                 <p class="desc">UI Designer</p>
+                </div>
             </li>
         </ul>
         </div>
