--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
 
     <section class="section">
         <div class="container">
-        <h1 class="section-title">Виды услуг</h1>
+        <h1 class="section-hidden-title">Виды услуг</h1>
         <ul class="button-list">
             <li>
                 <button class="button" type="button">Все</button>
@@ -63,72 +63,90 @@
                 <button class="button" type="button">Маркетинг</button>
             </li>
         </ul>
-        </div>
+        
     
     <!-- Примеры работ -->
-<div class="container">
+
 <ul class="work-list">
     <li class="card">
         <a class="link" href="">
-            <img class="projects" src="./images/project1.jpg" alt="веб-сайт" width="370" height="294">
-        <h2 class="title">Технокряк</h2>
+            <img src="./images/project1.jpg" alt="веб-сайт" width="370" height="294">
+       <div class="projects">
+            <h2 class="title">Технокряк</h2>
         <p class="text">Веб-сайт</p>
+        </div>
         </a>
     </li>
     <li class="card">
         <a class="link" href="">
-            <img class="projects" src="./images/project2.jpg" alt="постер" width="370" height="294">
-        <h2 class="title">Постер New Orlean vs Golden Star</h2>
+            <img src="./images/project2.jpg" alt="постер" width="370" height="294">
+       <div class="projects">
+            <h2 class="title">Постер New Orlean vs Golden Star</h2>
         <p class="text">Дизайн</p>
+        </div>
         </a>
     </li>
     <li class="card">
         <a class="link" href="">
-            <img class="projects" src="./images/project3.jpg" alt="название-ресторана" width="370" height="294">
-        <h2 class="title">Ресторан Seafood</h2>
+            <img src="./images/project3.jpg" alt="название-ресторана" width="370" height="294">
+        <div class="projects">
+            <h2 class="title">Ресторан Seafood</h2>
         <p class="text">Приложение</p>
+        </div>
         </a>
     </li>
     <li class="card">
         <a class="link" href="">
-            <img class="projects" src="./images/project4.jpg" alt="наушники" width="370" height="294">
-        <h2 class="title">Проект Prime</h2>
+            <img src="./images/project4.jpg" alt="наушники" width="370" height="294">
+        <div class="projects">
+            <h2 class="title">Проект Prime</h2>
         <p class="text">Маркетинг</p>
+        </div>
         </a>
     </li>
     <li class="card">
         <a class="link" href="">
-            <img class="projects" src="./images/project5.jpg" alt="коробки" width="370" height="294">
-        <h2 class="title">Проект Boxes</h2>
+            <img src="./images/project5.jpg" alt="коробки" width="370" height="294">
+     <div class="projects">
+            <h2 class="title">Проект Boxes</h2>
         <p class="text">Приложение</p>
+        </div>
         </a>
     </li>
     <li class="card">
         <a class="link" href="">
-            <img class="projects" src="./images/project6.jpg" alt="веб-сайт" width="370" height="294">
-        <h2 class="title">Inspiration has no Borders</h2>
+            <img src="./images/project6.jpg" alt="веб-сайт" width="370" height="294">
+        <div class="projects">
+            <h2 class="title">Inspiration has no Borders</h2>
         <p class="text">Веб-сайт</p>
+        </div>
         </a>
     </li>
     <li class="card">
         <a class="link" href="">
-            <img class="projects" src="./images/project7.jpg" alt="книга" width="370" height="294">
-        <h2 class="title">Издание Limited Edition</h2>
+            <img src="./images/project7.jpg" alt="книга" width="370" height="294">
+        <div class="projects">
+            <h2 class="title">Издание Limited Edition</h2>
         <p class="text">Дизайн</p>
+        </div>
         </a>
     </li>
     <li class="card">
         <a class="link" href="">
-            <img class="projects" src="./images/project8.jpg" alt="дизайн" width="370" height="294">
-        <h2 class="title">Проект LAB</h2>
+            <img src="./images/project8.jpg" alt="дизайн" width="370" height="294">
+    <div class="projects">
+            <h2 class="title">Проект LAB</h2>
         <p class="text">Маркетинг</p>
+        </div>
         </a>
     </li>
     <li class="card">
         <a class="link" href="">
-            <img class="projects" src="./images/project9.jpg" alt="компьютер" width="370" height="294">
-        <h2 class="title">Growing Business</h2>
+            <img src="./images/project9.jpg" alt="компьютер" width="370" height="294">
+    <div class="projects">
+            <h2 class="title">Growing Business</h2>
         <p class="text">Приложение</p>
+        </div>
         </a>
     </li>
 </ul>
